Fix subscribe banner on mobile. By hiding it.
Fixes https://github.com/TryGhost/Ghost.org/issues/595

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -792,4 +792,8 @@ h4 a, h5 a, h6 a {
            background: #111;
        }
    }
+
+   @media (max-width: 800px) {
+       display: none;
+   }
 }
